# SMA_PROJECT_REPORT_SUMMARY

./: README.md  pyproject.toml  report.md  report_final.docx
src/t/: crew.py  main.py
src/t/config/: agents.yaml  tasks.yaml
