[project]
name = "t"
version = "0.1.0"
description = "T using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
    "langchain_groq"
]

[project.scripts]
t = "t.main:run"
run_crew = "t.main:run"
train = "t.main:train"
replay = "t.main:replay"
test = "t.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
